# wika_node

./: .gitignore  Cargo.toml  Dockerfile  docker-compose-example.yaml  docker-compose.yaml  genesis_spec.json  readme.md  start  start_chain  start_dev  start_docker  start_test_node  todo.txt
.github/workflows/: release.yml  tag.yml
chainspec/: test.json
dev_keys/: alice_aura.json  alice_ownr.json
libs/traits/: Cargo.toml
libs/traits/src/: lib.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/authorities/: Cargo.toml
pallets/authorities/src/: lib.rs
pallets/likes/: Cargo.toml
pallets/likes/src/: lib.rs
pallets/owners/: Cargo.toml
pallets/owners/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
tests/: manual_testing.md
validators/: add_keys  gran.json  readme.md
