[package]
name = "wika-runtime"
version = "2.0.0"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# General
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
# Substrate primitives
sp-api = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/api" }
sp-block-builder = { path = "../../substrate/primitives/block-builder", default-features = false, version = "3.0.0"}
sp-consensus-aura = { version = "0.9.0", default-features = false, path = "../../substrate/primitives/consensus/aura" }
sp-core = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/core" }
sp-inherents = { path = "../../substrate/primitives/inherents", default-features = false, version = "3.0.0"}
sp-offchain = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/offchain" }
sp-runtime = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/runtime" }
sp-session = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/session" }
sp-std = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/std" }
sp-transaction-pool = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/transaction-pool" }
sp-version = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/version" }
# Substrate frame
frame-support = { version = "3.0.0", default-features = false, path = "../../substrate/frame/support" }
frame-system = { version = "3.0.0", default-features = false, path = "../../substrate/frame/system" }
frame-executive = { version = "3.0.0", default-features = false, path = "../../substrate/frame/executive" }
# Substrate pallets
pallet-aura = { version = "3.0.0", default-features = false, path = "../../substrate/frame/aura" }
pallet-balances = { version = "3.0.0", default-features = false, path = "../../substrate/frame/balances" }
pallet-timestamp = { version = "3.0.0", default-features = false, path = "../../substrate/frame/timestamp" }
pallet-transaction-payment = { version = "3.0.0", default-features = false, path = "../../substrate/frame/transaction-payment" }
pallet-grandpa = { version = "3.0.0", default-features = false, path = "../../substrate/frame/grandpa" }
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false, path = "../../substrate/frame/randomness-collective-flip" }
pallet-sudo = { version = "3.0.0", default-features = false, path = "../../substrate/frame/sudo" }
# Substrate RPC
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false, path = "../../substrate/frame/system/rpc/runtime-api/" }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false, path = "../../substrate/frame/transaction-payment/rpc/runtime-api/" }
# Benchmarking
frame-benchmarking = { version = "3.0.0", default-features = false, path = "../../substrate/frame/benchmarking", optional = true }
frame-system-benchmarking = { version = "3.0.0", default-features = false, path = "../../substrate/frame/system/benchmarking", optional = true }
hex-literal = { version = "0.3.1", optional = true }
# Wika Pallets
pallet-owners = { default-features = false, path = "../pallets/owners" }
pallet-likes = { default-features = false, path = "../pallets/likes" }

[build-dependencies]
substrate-wasm-builder = { version = "4.0.0", path = "../../substrate/utils/wasm-builder" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-owners/std",
]
runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"hex-literal",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
