[package]
name = "wika-runtime"
version = "2.0.0"
authors = ["randombishop"]
edition = "2018"
license = "Unlicense"
homepage = "https://www.wika.network"
repository = "https://github.com/randombishop/wika_node/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# General
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
# Substrate primitives
sp-api = { default-features = false, path = "../../substrate/primitives/api" }
sp-block-builder = { default-features = false, path = "../../substrate/primitives/block-builder" }
sp-consensus-aura = { default-features = false, path = "../../substrate/primitives/consensus/aura" }
sp-core = { default-features = false, path = "../../substrate/primitives/core" }
sp-inherents = { default-features = false, path = "../../substrate/primitives/inherents"}
sp-offchain = { default-features = false, path = "../../substrate/primitives/offchain" }
sp-runtime = { default-features = false, path = "../../substrate/primitives/runtime" }
sp-session = { default-features = false, path = "../../substrate/primitives/session" }
sp-std = { default-features = false, path = "../../substrate/primitives/std" }
sp-transaction-pool = { default-features = false, path = "../../substrate/primitives/transaction-pool" }
sp-version = { default-features = false, path = "../../substrate/primitives/version" }
# Substrate frame
frame-support = { default-features = false, path = "../../substrate/frame/support" }
frame-system = { default-features = false, path = "../../substrate/frame/system" }
frame-executive = { default-features = false, path = "../../substrate/frame/executive" }
# Substrate pallets
pallet-aura = { default-features = false, path = "../../substrate/frame/aura" }
pallet-balances = { default-features = false, path = "../../substrate/frame/balances" }
pallet-timestamp = { default-features = false, path = "../../substrate/frame/timestamp" }
pallet-transaction-payment = { default-features = false, path = "../../substrate/frame/transaction-payment" }
pallet-grandpa = { default-features = false, path = "../../substrate/frame/grandpa" }
pallet-randomness-collective-flip = { default-features = false, path = "../../substrate/frame/randomness-collective-flip" }
pallet-sudo = { default-features = false, path = "../../substrate/frame/sudo" }
# Substrate RPC
frame-system-rpc-runtime-api = { default-features = false, path = "../../substrate/frame/system/rpc/runtime-api/" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, path = "../../substrate/frame/transaction-payment/rpc/runtime-api/" }
# Benchmarking
frame-benchmarking = { default-features = false, path = "../../substrate/frame/benchmarking", optional = true }
frame-system-benchmarking = { default-features = false, path = "../../substrate/frame/system/benchmarking", optional = true }
hex-literal = { version = "0.3.1", optional = true }
# Wika libs and pallets
wika-traits = { default-features = false, path = '../libs/traits' }
pallet-authorities = { default-features = false, path = "../pallets/authorities" }
pallet-owners = { default-features = false, path = "../pallets/owners" }
pallet-likes = { default-features = false, path = "../pallets/likes" }

[build-dependencies]
substrate-wasm-builder = { path = "../../substrate/utils/wasm-builder" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",

	"frame-executive/std",
	"frame-support/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",

    "wika-traits/std",
	"pallet-authorities/std",
	"pallet-owners/std",
	"pallet-likes/std",
]

runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"hex-literal",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
