[package]
authors = ['Wika Network <https://wika.network>']
description = 'FRAME pallet to manage URL ownership.'
edition = '2018'
homepage = 'https://wika.network'
license = 'Unlicense'
name = 'pallet-authorities'
readme = 'README.md'
repository = 'https://github.com/randombishop/wika_node'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
parity-scale-codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
hex = { version = '0.4', default-features = false}
numtoa = { version = '0.2.4', default-features = false}
serde = { version = "1.0.101", optional = true, features = ["derive"] }
# Substrate dependencies
sp-std = {default-features = false, version = '3.0.0', path = '../../../substrate/primitives/std'}
sp-application-crypto = {default-features = false, version = '3.0.0', path = '../../../substrate/primitives/application-crypto'}
sp-io = {default-features = false, version = '3.0.0', path = '../../../substrate/primitives/io'}
sp-runtime = {default-features = false, version = '3.0.0', path = '../../../substrate/primitives/runtime'}
sp-core = {default-features = false, version = '3.0.0', path = '../../../substrate/primitives/core'}
sp-consensus-aura = { version = "0.9.0", default-features = false, path = "../../../substrate/primitives/consensus/aura" }
frame-support = {default-features = false, version = '3.0.0', path = '../../../substrate/frame/support'}
frame-system = {default-features = false, version = '3.0.0', path = '../../../substrate/frame/system'}
pallet-grandpa = { version = "3.0.0", default-features = false, path = "../../../substrate/frame/grandpa" }
# Wika libraries
wika-traits = { default-features = false, version = '3.0.0', path = '../../libs/traits' }

[features]
default = ['std']
std = [
	'parity-scale-codec/std',
    'hex/std',
    'serde',

    'sp-std/std',
	'sp-application-crypto/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-core/std',
	'sp-consensus-aura/std',
	'frame-support/std',
	'frame-system/std',
    'pallet-grandpa/std',

	'wika-traits/std'
]
