[package]
authors = ['randombishop']
description = 'FRAME pallet to manage URL ownership.'
edition = '2018'
homepage = 'https://www.wika.network'
license = 'Unlicense'
name = 'pallet-authorities'
readme = 'README.md'
repository = 'https://github.com/randombishop/wika_node'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
parity-scale-codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
serde = { version = "1.0.101", optional = true, features = ["derive"] }
# Substrate dependencies
sp-std = {default-features = false, path = '../../../substrate/primitives/std'}
sp-runtime = {default-features = false, path = '../../../substrate/primitives/runtime'}
sp-core = {default-features = false, path = '../../../substrate/primitives/core'}
sp-consensus-aura = { default-features = false, path = "../../../substrate/primitives/consensus/aura" }
frame-support = {default-features = false, path = '../../../substrate/frame/support'}
frame-system = {default-features = false, path = '../../../substrate/frame/system'}
pallet-grandpa = { default-features = false, path = "../../../substrate/frame/grandpa" }
# Wika libraries
wika-traits = { default-features = false, path = '../../libs/traits' }

[features]
default = ['std']
std = [
	'parity-scale-codec/std',
    'serde',

    'sp-std/std',
	'sp-runtime/std',
	'sp-core/std',
	'sp-consensus-aura/std',
	'frame-support/std',
	'frame-system/std',
    'pallet-grandpa/std',

	'wika-traits/std'
]
