[package]
authors = ['randombishop']
description = 'FRAME pallet to manage likes.'
edition = '2018'
homepage = 'https://www.wika.network'
license = 'Unlicense'
name = 'pallet-likes'
repository = 'https://github.com/randombishop/wika_node'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies]
# external dependencies
parity-scale-codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
log = { version = "0.4.14", default-features = false }
# Substrate dependencies
frame-support = { default-features = false, path = '../../../substrate/frame/support' }
frame-system = { default-features = false, path = '../../../substrate/frame/system' }
sp-std = { default-features = false, path = '../../../substrate/primitives/std' }
sp-io = { default-features = false, path = '../../../substrate/primitives/io' }
sp-runtime = { default-features = false, path = '../../../substrate/primitives/runtime' }
# Wika libraries
wika-traits = { default-features = false, path = '../../libs/traits' }


[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-io/std',
    'sp-runtime/std',
    'wika-traits/std',
    'log/std'
]
