[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-owners'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
parity-scale-codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
hex = { version = '0.4', default-features = false}
# Substrate dependencies
frame-support = {default-features = false, version = '3.0.0', path = '../../../substrate/frame/support'}
frame-system = {default-features = false, version = '3.0.0', path = '../../../substrate/frame/system'}
sp-std = {default-features = false, version = '3.0.0', path = '../../../substrate/primitives/std'}
sp-application-crypto = {default-features = false, version = '3.0.0', path = '../../../substrate/primitives/application-crypto'}
sp-io = {default-features = false, version = '3.0.0', path = '../../../substrate/primitives/io'}
sp-runtime = {default-features = false, version = '3.0.0', path = '../../../substrate/primitives/runtime'}
sp-core = {default-features = false, version = '3.0.0', path = '../../../substrate/primitives/core'}

[features]
default = ['std']
std = [
	'parity-scale-codec/std',
    'hex/std',
	'frame-support/std',
	'frame-system/std',
	'sp-std/std',
	'sp-application-crypto/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-core/std'
]
