[package]
authors = ['randombishop']
description = 'FRAME pallet to manage URL ownership.'
edition = '2018'
homepage = 'https://wika.network'
license = 'Unlicense'
name = 'pallet-owners'
readme = 'README.md'
repository = 'https://github.com/randombishop/wika_node'
version = '3.0.0'



[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
parity-scale-codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.2.0'}
hex = { version = '0.4', default-features = false}
numtoa = { version = '0.2.4', default-features = false}
log = { version = "0.4.14", default-features = false }
# Substrate dependencies
frame-support = {default-features = false, path = '../../../substrate/frame/support'}
frame-system = {default-features = false, path = '../../../substrate/frame/system'}
sp-std = {default-features = false, path = '../../../substrate/primitives/std'}
sp-application-crypto = {default-features = false, path = '../../../substrate/primitives/application-crypto'}
sp-io = {default-features = false, path = '../../../substrate/primitives/io'}
sp-runtime = {default-features = false, path = '../../../substrate/primitives/runtime'}
sp-core = {default-features = false, path = '../../../substrate/primitives/core'}
# Wika libraries
wika-traits = { default-features = false, path = '../../libs/traits' }

[features]
default = ['std']
std = [
	'parity-scale-codec/std',
    'hex/std',
    'log/std',
	'frame-support/std',
	'frame-system/std',
	'sp-std/std',
	'sp-application-crypto/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-core/std',
	'wika-traits/std'
]
